[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-dsl"
version = "0.1.0"
description = "AI-Enhanced Web DSL"
authors = [{ name="acatree", email="academictree.kr@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "click",
]
requires-python = ">=3.7"

[project.scripts]
vibe = "vibe.cli:build_command"
